added in fetch previous test functionality
